--- a/gb/19/12/13/n11720057.md
+++ b/gb/19/12/13/n11720057.md
@@ -1,58 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/fxikhp286/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/fxikhp286/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÐÂÖÝ´óÁä²ú¸¾Ô½À´Ô½¶à ÆÊ¸¹²úÕ¼Èý³ÉÒÔÉÏ</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/pxdgi295/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/pxdgi295/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/pxdgi295/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/pxdgi295/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>æ–°å·žå¤§é¾„äº§å¦‡è¶Šæ¥è¶Šå¤š å‰–è…¹äº§å ä¸‰æˆä»¥ä¸Š</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ13ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÌìî£°ÄÖÞÏ¤Äá±àÒë±¨µ¼£©×îÐÂÊý¾ÝÏÔÊ¾£¬Èý·ÖÖ®Ò»ÒÔÉÏµÄÐÂÖÝÔÐ¸¾È¥ÄêÑ¡ÔñÁË<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md">ÆÊ¸¹²ú</a>£¬×ÔÈ»Éú²úÂÊ½µÖÁÐÂµÍ¡£ÐÂÖÝÎÀÉúÌü×¨¼Ò±íÊ¾£¬ÕâÖ÷ÒªÊÇÒòÎª²ú¸¾Éúº¢×ÓÊ±µÄÄêÁäÔ½À´Ô½´ó£¬µ«²ú¸¾×Ô¼ºµÄÑ¡ÔñºÍ²ú¿ÆÒ½Éú¡¢Öú²úÊ¿Ò²ÔÚÆäÖÐÆðÁËÒ»¶¨µÄ×÷ÓÃ¡£</p>
-<p>ÖÜÎå¹«²¼µÄÐÂÖÝÄ¸Ó¤±¨¸æÏÔÊ¾£¬2018ÄêÔÚÐÂÖÝ³öÉúµÄÓ¤¶ùÖÐ£¬Ö»ÓÐ53.6%ÊôÓÚÕý³£²úµÀ<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md">·ÖÃä</a>£¬¶ø2014ÄêµÄ±ÈÀýÎª56.3%¡£<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md">ÆÊ¸¹²ú</a>³öÉúµÄÓ¤¶ù±ÈÀý´Ó4ÄêÇ°µÄ32.2%ÔöÖÁ2018ÄêµÄ34.5%¡£</p>
-<p>ÔÚËùÓÐÖ÷Òª²ú¿ÆÒ½ÔºÖÐ£¬°¢¶û¸¥À×µÂÍõ×ÓÒ½Ôº£¨RPAH£©µÄÕý³£²úµÀ<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md">·ÖÃä</a>ÂÊ×îµÍ£¬Ö»ÓÐ46.7%£¬±õ³Ç-ÀûµÂ¿µÄ·£¨Bankstown-Lidcombe£©Ò½ÔºµÄÕý³£·ÖÃäÂÊ×î¸ß£¬Îª62.4%¡£</p>
-<p>ÔÚ<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md">¹«Á¢Ò½Ôº</a>ÖÐ£¬ÄÚÆ¤¶÷Ò½Ôº£¨Nepean Hospital£©µÄÑ¡ÔñÐÔÆÊ¸¹²ú±ÈÀý¾ÓÓÚ×î¸ßÖ®ÁÐ¡£Ê¥ÇÇÖÎÒ½Ôº£¨St George Hospital£©µÄÑ¡ÔñÐÔÆÊ¸¹²ú±ÈÀý×îµÍ£¬Îª16.1%£¬µ«½ô¼±ÆÊ¸¹²ú±ÈÀý×î¸ß£¬ÓÐ15.4%¡£</p>
-<p>Èç¹ûÖ»Í³¼Æ<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md">¹«Á¢Ò½Ôº</a>µÄÊý¾Ý£¬Õý³£²úµÀ·ÖÃäÂÊÔò´Ó2014ÄêµÄ62.4%½µÖÁÁË2018ÄêµÄ59%¡£</p>
-<p>ÔÚÐÂÖÝ£¬Ñ¡ÔñÐÔÆÊ¸¹²ú×Ü±ÈÀýÎª22.2%£¬ÆäÖÐË½Á¢Ò½ÔºÕ¼31.2%£¬¹«Á¢Ò½Ôº17.8%¡£×ÔÈ»·ÖÃäµÄ±ÈÀý´Ó2014ÄêµÄ50.8%½µÖÁ2018ÄêµÄ44%¡£</p>
-<p>ÐÂÖÝÎÀÉúÌü×ÊÉî<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E5%A6%87%E4%BA%A7%E7%A7%91.md">¸¾²ú¿Æ</a>¹ËÎÊ±íÊ¾£¬ÆÊ¸¹²ú±ÈÀý½«»á¼ÌÐøÉý¸ß£¬ÕâÖ÷ÒªÊÇÒòÎªÔ½À´Ô½¶àµÄÅ®ÐÔÑ¡ÔñÔÚÄêÁäÆ«´óµÄÊ±ºòÉúº¢×Ó£¬µ«²ú¸¾×Ô¼ºµÄÑ¡Ôñ¡¢²ú¿ÆÒ½ÉúºÍÖú²úÊ¿¿ÉÄÜÔÚÆäÖÐÒ²ÆðÁËÒ»¶¨µÄ×÷ÓÃ¡£</p>
-<p>±±Ï¤ÄáµØ·½ÎÀÉú¾Ö£¨LHD£©Ï½ÇøµÄ¸ßÁä²ú¸¾×î¶à£¬42%µÄ²ú¸¾ÄêÁäÔÚ30Ëêµ½34Ö®¼ä£»33.1%ÄêÁä½éÓÚ35Ëêµ½39ËêÖ®¼ä£¬»¹ÓÐ8%ÔÚ40ËêÒÔÉÏ¡£</p>
-<p>2018Äê£¬ÐÂÖÝ¹²ÓÐ95,552ÃûÓ¤¶ù³öÉú£¬±È2014Äê¼õÉÙÁË1.8%¡£</p>
-<p>ÔðÈÎ±à¼­£ºÔÀÃ÷</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ13æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¤©ç¿æ¾³æ´²æ‚‰å°¼ç¼–è¯‘æŠ¥å¯¼ï¼‰æœ€æ–°æ•°æ®æ˜¾ç¤ºï¼Œä¸‰åˆ†ä¹‹ä¸€ä»¥ä¸Šçš„æ–°å·žå­•å¦‡åŽ»å¹´é€‰æ‹©äº†<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md#1">å‰–è…¹äº§</a>ï¼Œè‡ªç„¶ç”Ÿäº§çŽ‡é™è‡³æ–°ä½Žã€‚æ–°å·žå«ç”ŸåŽ…ä¸“å®¶è¡¨ç¤ºï¼Œè¿™ä¸»è¦æ˜¯å› ä¸ºäº§å¦‡ç”Ÿå­©å­æ—¶çš„å¹´é¾„è¶Šæ¥è¶Šå¤§ï¼Œä½†äº§å¦‡è‡ªå·±çš„é€‰æ‹©å’Œäº§ç§‘åŒ»ç”Ÿã€åŠ©äº§å£«ä¹Ÿåœ¨å…¶ä¸­èµ·äº†ä¸€å®šçš„ä½œç”¨ã€‚</p>
+<p>å‘¨äº”å…¬å¸ƒçš„æ–°å·žæ¯å©´æŠ¥å‘Šæ˜¾ç¤ºï¼Œ2018å¹´åœ¨æ–°å·žå‡ºç”Ÿçš„å©´å„¿ä¸­ï¼Œåªæœ‰53.6%å±žäºŽæ­£å¸¸äº§é“<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md#1">åˆ†å¨©</a>ï¼Œè€Œ2014å¹´çš„æ¯”ä¾‹ä¸º56.3%ã€‚<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%89%96%E8%85%B9%E4%BA%A7.md#1">å‰–è…¹äº§</a>å‡ºç”Ÿçš„å©´å„¿æ¯”ä¾‹ä»Ž4å¹´å‰çš„32.2%å¢žè‡³2018å¹´çš„34.5%ã€‚</p>
+<p>åœ¨æ‰€æœ‰ä¸»è¦äº§ç§‘åŒ»é™¢ä¸­ï¼Œé˜¿å°”å¼—é›·å¾·çŽ‹å­åŒ»é™¢ï¼ˆRPAHï¼‰çš„æ­£å¸¸äº§é“<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%88%86%E5%A8%A9.md#1">åˆ†å¨©</a>çŽ‡æœ€ä½Žï¼Œåªæœ‰46.7%ï¼Œæ»¨åŸŽ-åˆ©å¾·åº·å§†ï¼ˆBankstown-Lidcombeï¼‰åŒ»é™¢çš„æ­£å¸¸åˆ†å¨©çŽ‡æœ€é«˜ï¼Œä¸º62.4%ã€‚</p>
+<p>åœ¨<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md#1">å…¬ç«‹åŒ»é™¢</a>ä¸­ï¼Œå†…çš®æ©åŒ»é™¢ï¼ˆNepean Hospitalï¼‰çš„é€‰æ‹©æ€§å‰–è…¹äº§æ¯”ä¾‹å±…äºŽæœ€é«˜ä¹‹åˆ—ã€‚åœ£ä¹”æ²»åŒ»é™¢ï¼ˆSt George Hospitalï¼‰çš„é€‰æ‹©æ€§å‰–è…¹äº§æ¯”ä¾‹æœ€ä½Žï¼Œä¸º16.1%ï¼Œä½†ç´§æ€¥å‰–è…¹äº§æ¯”ä¾‹æœ€é«˜ï¼Œæœ‰15.4%ã€‚</p>
+<p>å¦‚æžœåªç»Ÿè®¡<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%85%AC%E7%AB%8B%E5%8C%BB%E9%99%A2.md#1">å…¬ç«‹åŒ»é™¢</a>çš„æ•°æ®ï¼Œæ­£å¸¸äº§é“åˆ†å¨©çŽ‡åˆ™ä»Ž2014å¹´çš„62.4%é™è‡³äº†2018å¹´çš„59%ã€‚</p>
+<p>åœ¨æ–°å·žï¼Œé€‰æ‹©æ€§å‰–è…¹äº§æ€»æ¯”ä¾‹ä¸º22.2%ï¼Œå…¶ä¸­ç§ç«‹åŒ»é™¢å 31.2%ï¼Œå…¬ç«‹åŒ»é™¢17.8%ã€‚è‡ªç„¶åˆ†å¨©çš„æ¯”ä¾‹ä»Ž2014å¹´çš„50.8%é™è‡³2018å¹´çš„44%ã€‚</p>
+<p>æ–°å·žå«ç”ŸåŽ…èµ„æ·±<ahref="https://github.com/pxdgi295/djy/blob/master/gb/tag/%E5%A6%87%E4%BA%A7%E7%A7%91.md#1">å¦‡äº§ç§‘</a>é¡¾é—®è¡¨ç¤ºï¼Œå‰–è…¹äº§æ¯”ä¾‹å°†ä¼šç»§ç»­å‡é«˜ï¼Œè¿™ä¸»è¦æ˜¯å› ä¸ºè¶Šæ¥è¶Šå¤šçš„å¥³æ€§é€‰æ‹©åœ¨å¹´é¾„åå¤§çš„æ—¶å€™ç”Ÿå­©å­ï¼Œä½†äº§å¦‡è‡ªå·±çš„é€‰æ‹©ã€äº§ç§‘åŒ»ç”Ÿå’ŒåŠ©äº§å£«å¯èƒ½åœ¨å…¶ä¸­ä¹Ÿèµ·äº†ä¸€å®šçš„ä½œç”¨ã€‚</p>
+<p>åŒ—æ‚‰å°¼åœ°æ–¹å«ç”Ÿå±€ï¼ˆLHDï¼‰è¾–åŒºçš„é«˜é¾„äº§å¦‡æœ€å¤šï¼Œ42%çš„äº§å¦‡å¹´é¾„åœ¨30å²åˆ°34ä¹‹é—´ï¼›33.1%å¹´é¾„ä»‹äºŽ35å²åˆ°39å²ä¹‹é—´ï¼Œè¿˜æœ‰8%åœ¨40å²ä»¥ä¸Šã€‚</p>
+<p>2018å¹´ï¼Œæ–°å·žå…±æœ‰95,552åå©´å„¿å‡ºç”Ÿï¼Œæ¯”2014å¹´å‡å°‘äº†1.8%ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå²³æ˜Ž</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/13/n11720057.htm">ÐÂÖÝ´óÁä²ú¸¾Ô½À´Ô½¶à ÆÊ¸¹²úÕ¼Èý³ÉÒÔÉÏ</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/29/n11619757.htm">ÎÂÈá×ÔÈ»ÈËÐÔ»¯Éú²ú Ò½»¤ÈËÔ±Óë²ú¸¾ÊÜ»Ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/1/n11559474.htm">È«Çò×î¸ßÁä²ú¸¾Éú²ú ·òÆÞË«Ë«½ø¼Ó»¤²¡·¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/16/n11524389.htm">¾¯¾ÖÍâ²ú¸¾ÁÙÅè ¾¯¹ÙË³Àû½ÓÉúÄÐÓ¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/8/n11372575.htm">°²Ê¡²¦¿î2,800ÍòÔª À©´ó²ú¸¾»¤Àí·þÎñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/1/n11293713.htm">Ê×¶¼²ú¿Æ´²Î»½ôÕÅ ²ú¸¾×¡ÔºÊ±¼äÈ«°Ä×î¶Ì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/19/n11055702.htm">¸ßÁä²ú¸¾·çÏÕ¸ß ÊÊÁäÉúÓýºÜÖØÒª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/18/n11053245.htm">Éú²úÊÂ¹Ê¾È¼Ã±¨¸æ ²ú¸¾ËÀÒòÑòË®Ë¨Èû×î¶à</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/23/n10995581.htm">ÍÎÎ»·ÖÃä³ÉÊ§´«ÊÖÒÕ Î¬ÖÝ²ú¸¾±»ÆÈÆÊ¸¹²ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/1/20/n10073667.htm">¿°ÅàÀ­ÍØÕ¹²ú¸¾¾«Éñ½¡¿µ·þÎñ</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11718851.htm">ÏÃÃÅµØÌúµØÃæËúÏÝ 2³µ×¹Èë ´óÁ¿»ýË®Ó¿Èë</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719209.htm">ÃÀÖÐÔ­ÔòÉÏ´ï³ÉµÚÒ»½×¶ÎÐ­Òé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11717810.htm">Ç´ÔðºÎ¾ýÒ¢Á½Òé°¸ Ïã¸ÛÁ¢·¨»áÎÞÈË·´¶Ô</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11717158.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ãæ¶ÔÇ¿È¨ ¸ÛÈË»¹ÓÐÁ½Ñù¡°ÎäÆ÷¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11682462.htm">ÔÚ´óÊÇ´ó·ÇÃæÇ° Ã»ÓÐÖÐÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693541.htm">¡¾²Å×Ó¼ÑÈË¡¿Í³¾ü20ÍòµÄÊé·¨¼ÒÑÕÕæÇä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/29/n11690587.htm">ÂÖ»ØÖÐ¡°ÎÒÊÇË­¡±£¿Ç°ÊÀÎªÉ® ½ñÉúÎª¹Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707306.htm">ÅÌµãÄÇÐ©ÓëµÛÍõ½«ÏàÓÐ¹ØµÄÃÀÊ³£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/10/n11714459.htm">ÃÀ¹úÖÆ²ÃÇ×¹²¸ÛÃ½ ÐÇµºÀÏ°åÎªºÎÔâÈÈÒé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716774.htm">³õÑ§¸ñ¶·±»°²ÅÅÓë¹Ú¾ü¶Ô´ò ´óÑ§Éú±»ÌßÃüÎ£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11716656.htm">ÒßÇéÀ©´ó ¹þ¶û±õÔÙÓÐ13ÃûÑ§Éú¸ÐÈ¾²¼²¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11717158.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ãæ¶ÔÇ¿È¨ ¸ÛÈË»¹ÓÐÁ½Ñù¡°ÎäÆ÷¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11714923.htm">¡¾Ë¼ÏëÁìÐä¡¿×¨·Ã´÷Ò«Í¢£º¸ÛÈËÎª×ÔÓÉÊÀ½ç¿¹Õù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/12/n11719243.htm">¡¾ÈÈµã»¥¶¯¡¿µçÄÔÉè±¸ÓÃ¹ú»õ ÖÐ¹²ÓûÓëÎ÷·½ÍÑ¹³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715921.htm">ÐíÃÏÕÜÐû²¼½á»é ÌðÂ§ÕÔÃÏ×Ëº°¡°ÐíÌ«Ì«¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/10/n11713973.htm">ÖÐ¹²ÏÞ¹ÅÁîÔÙÉý¼¶ ¸÷Æ½Ì¨Ã¿ÔÂÏÞ²¥Ò»²¿¹Å×°¾ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/10/n11714227.htm">±»Ä¨ºÚºÍÔìÒ¥ÄÃÃÀ¹úÂÌ¿¨ »ÆÖ®·æ³°·íÎåÃ«Î±Ôì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715573.htm">ÈðµäÀÖÍÅRoxetteÖ÷³ª²¡ÊÅ ÏíÊÙ61Ëê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/11/n11715878.htm">ÈÕ±¾¡¶PD101¡·¶¹Ô­Ò»³É¶á¹Ú JO1³ÉÔ±³öÂ¯</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/1/20/n10073667.md#1">å ªåŸ¹æ‹‰æ‹“å±•äº§å¦‡ç²¾ç¥žå¥åº·æœåŠ¡</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/1/23/n10995581.md#1">è‡€ä½åˆ†å¨©æˆå¤±ä¼ æ‰‹è‰º ç»´å·žäº§å¦‡è¢«è¿«å‰–è…¹äº§</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/2/18/n11053245.md#1">ç”Ÿäº§äº‹æ•…æ•‘æµŽæŠ¥å‘Š äº§å¦‡æ­»å› ç¾Šæ°´æ “å¡žæœ€å¤š</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/2/19/n11055702.md#1">é«˜é¾„äº§å¦‡é£Žé™©é«˜ é€‚é¾„ç”Ÿè‚²å¾ˆé‡è¦</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/6/1/n11293713.md#1">é¦–éƒ½äº§ç§‘åºŠä½ç´§å¼  äº§å¦‡ä½é™¢æ—¶é—´å…¨æ¾³æœ€çŸ­</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/7/8/n11372575.md#1">å®‰çœæ‹¨æ¬¾2,800ä¸‡å…ƒ æ‰©å¤§äº§å¦‡æŠ¤ç†æœåŠ¡</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/9/16/n11524389.md#1">è­¦å±€å¤–äº§å¦‡ä¸´ç›† è­¦å®˜é¡ºåˆ©æŽ¥ç”Ÿç”·å©´</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/10/1/n11559474.md#1">å…¨çƒæœ€é«˜é¾„äº§å¦‡ç”Ÿäº§ å¤«å¦»åŒåŒè¿›åŠ æŠ¤ç—…æˆ¿</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/10/29/n11619757.md#1">æ¸©æŸ”è‡ªç„¶äººæ€§åŒ–ç”Ÿäº§ åŒ»æŠ¤äººå‘˜ä¸Žäº§å¦‡å—æƒ </a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215436.md#1">é˜¿å¾·èŽ±å¾·å…«æœˆæ‹Ÿä¸¾åŠžæ¾³å¤ªèˆªç©º??å³°ä¼š</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/19/12/13/n11720057.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šæ‹¼éŸ³åŒ–ä¸Žç®€åŒ–æ±‰å­—</a></li><li><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">ä¸€è¶Ÿå°åº¦ä¹‹è¡Œ è®©å¥¹æ‰¾åˆ°ç”Ÿå‘½å›žå½’ä¹‹è·¯</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211217.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ¹–åŒ—680åº§æ°´åº“è¶…æ±›é™ æˆ¿å±‹è¢«æ·¹</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212964.md#1">ã€å†…å¹•ã€‘çŽ‹å²å±±æ±ªæ´‹ä¸Žç¾Žæ–¹äº¤æ‰‹ é“©ç¾½è€Œå½’</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213782.md#1">æ—¥ç±æŸ“ç–«å­¦ç”ŸæŽ¥è§¦è€…å…¨é˜´æ€§ åº„äººç¥¥ï¼šæœ‰2ç§å¯èƒ½</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211676.md#1">ç«¯åˆèŠ‚åŒ—äº¬ä¸‹å†°é›¹ å½¢çŠ¶é…·ä¼¼ä¸­å…±ç—…æ¯’</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/24/n12210450.md#1">ä¸­å…±ç—…æ¯’å¤§æµè¡Œ Costcoå–æ¶ˆé”€å”®ä¸€ç§é£Ÿå“</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/24/n12210389.md#1">æŽè‹±çˆ±æ™’9å²é¾™å‡¤èƒŽè¿‘ç…§ åŽ¨è‰ºèŽ·ç½‘å‹å¤¸èµž</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/24/n12210154.md#1">æœ¯åŽè¢æƒŸä»52å²ç”Ÿæ—¥ å„¿å­éš”ç©ºç¥å¯¿æƒ¹äººæ´’æ³ª</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212204.md#1">å‘¨æ˜Ÿé©°å¯¹èµŒå¤±è´¥ æŠµæŠ¼11äº¿è±ªå®…å‘¨è½¬èµ„é‡‘</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/24/n12209963.md#1">â€œç«ç®­å°‘å¥³â€è§£æ•£ æ¨è¶…è¶Šç«é€Ÿä¿®æ”¹å¾®åšè®¤è¯</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/24/n12208527.md#1">å¥³æ˜Ÿå„¿å­ä¼ ç—…å±æ»žæ³°éš¾å›žå° åº„äººç¥¥è§£ç­”å…³é”®</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/14/n12183964.md#1">ã€æ–‡å²ã€‘å¤ç±ä¸­å¤šå§¿å¤šå½©çš„ç«¯åˆèŠ‚ç²½</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/5/23/n12131668.md#1">ã€åº·ç†™å¤§å¸ã€‘é³Œæ‹œçŠ¯ä¸Š å›è‡£äº¤é”‹</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/5/15/n12112533.md#1">è¿èƒŒåŽŸè‘—çš„å®çŽ‰å¨¶äº²</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12207271.md#1">æŽè§£å…ƒæœ¬æ˜¯æ¨ªæ­»å‘½ åé‡‘æ•‘äººç¦å¯¿çš†æ”¹</a></li>
+<li><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/24/n12209159.md#1">ç«¯åˆï¼šçº¯é˜³æ­£æ°”è¾Ÿé˜´é‚ª</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/pxdgi295/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/pxdgi295/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/13/n11720057.htm">æ–°å·žå¤§é¾„äº§å¦‡è¶Šæ¥è¶Šå¤š å‰–è…¹äº§å ä¸‰æˆä»¥ä¸Š</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/pxdgi295/djy/blob/master/gb/19/12/13/n11720057.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/pxdgi295/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/pxdgi295/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/pxdgi295/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxdgi295/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
